# Special-Course-Large-Scale-Computing-And-Data-Analysis

./: README.md  appdata.md  coursedescription.md
2021/: README.md  coursedescription.md
previous student projects/Data Compression/jpekkila-cs-e4002-data-compression-in-hpc-bbd9073fd3bb/: .gitignore  CMakeLists.txt  LICENSE  README.md  visualize.py
previous student projects/Data Compression/jpekkila-cs-e4002-data-compression-in-hpc-bbd9073fd3bb/old/: .clang-format  .gitignore  .gitmodules  LICENSE  Makefile  README.md  benchmark.c  benchmark.h  buffer.c  buffer.h  build_dependencies.sh  build_dependencies_with_cuda.sh  compress-cast.h  compress-zfp.c.old  compress-zfp.h  compress.c  compress.h  error.h  fixedpoint.c  fixedpoint.h  fluidsample.csv  grid.c  grid.h  main.c  morton.h  random.csv  solver.c  solver.c.old  solver.c.old2  solver.h  timer.h  utils.h  visualize.c  visualize.h  visualize.py
previous student projects/Data Compression/jpekkila-cs-e4002-data-compression-in-hpc-bbd9073fd3bb/resources/: fluidsample.csv
previous student projects/Data Compression/jpekkila-cs-e4002-data-compression-in-hpc-bbd9073fd3bb/src/: CMakeLists.txt  analysis.c  analysis.h  benchmark.c  benchmark.h  buffer.c  buffer.h  compress.c  compress.h  errchk.h  grid.c  grid.h  main.c  morton.c  morton.h  solver.c  solver.h  timer.h  utils.h
previous student projects/Data Transformation/: Introductory Presentation.pptx  Presentation.pptx  Process.md  README.md
previous student projects/Human in the loop/: .gitignore  LICENSE  README.md
(+36 files in other folders)
